--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,15 @@
-aniso8601==9.0.1
 black==22.6.0
-certifi==2022.6.15
-charset-normalizer==2.1.0
-click==8.1.3
-colorama==0.4.5
-cycler==0.11.0
 Flask==2.2.1
 Flask-RESTful==0.3.9
-fonttools==4.34.4
-idna==3.3
-itsdangerous==2.1.2
-Jinja2==3.1.2
-kiwisolver==1.4.4
-MarkupSafe==2.1.1
+gunicorn==20.1.0
 marshmallow==3.17.0
-matplotlib==3.5.2
-mkl-fft==1.3.1
-mkl-random==1.2.2
-mkl-service==2.4.0
-mypy-extensions==0.4.3
-numpy==1.23.1
 opencv-python==4.6.0.66
-packaging==21.3
 pandas==1.4.3
-pathspec==0.9.0
+seaborn==0.11.2
 Pillow==9.2.0
-pip==22.1.2
-platformdirs==2.5.2
-pyparsing==3.0.9
-python-dateutil==2.8.2
-pytz==2022.1
 PyYAML==6.0
 requests==2.28.1
 scipy==1.9.0
-seaborn==0.11.2
-setuptools==61.2.0
-six==1.16.0
-tomli==2.0.1
-torch==1.12.1
-torchaudio==0.12.1
-torchvision==0.13.1
+torch==1.9.1
+torchvision==0.10.1
 tqdm==4.64.0
-typing_extensions==4.3.0
-urllib3==1.26.11
-webargs==8.2.0
-Werkzeug==2.2.1
-wheel==0.37.1
-wincertstore==0.2
