--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -8,10 +8,10 @@ services:
     ports:
       - "8000:8000"
 
-    volumes:
-      - type: bind
-        source: /.     # local dir. For windows use \ instead of /
-        target: /app   # docker container path
+    # volumes:
+    #   - type: bind
+    #     source: /.     # local dir. For windows use \ instead of /
+    #     target: /app   # docker container path
     command: >
           sh -c  "python3 scripts/download_ml_model.py &&
                   gunicorn -w 2  -b 0.0.0.0  app:app   "
